# cortex-cli

./: .env.example  .gitignore  README.md  pyproject.toml
core/: cli.py  config.py  loader.py
skills/azure_create_card/: manifest.yaml  skill.py
skills/pr_description/: manifest.yaml  skill.py  test_skill.py
skills/test_generator/: manifest.yaml  skill.py
