[project]
name = "cortex-cli"
version = "0.1.0"
description = "CLI com skills e rules para apoiar o fluxo de desenvolvimento (upstream e downstream)."
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.scripts]
cortex = "core.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core"]
